--- a/changebg/changebg.html
+++ b/changebg/changebg.html
@@ -55,6 +55,9 @@
             .nav-toggle.nav-toggle-active .hamburger:nth-child(2){ opacity:0;} 
             .nav-toggle.nav-toggle-active .hamburger:nth-child(3){ transform: translateY(-7px) rotate(-45deg);} 
         }
+        /* Left-align nav links under #navMenu */
+        #navMenu { justify-content: flex-start !important; text-align: left; }
+        #navMenu .nav-link { justify-content: flex-start !important; text-align: left !important; }
     </style>
 </head>
 <body>
@@ -68,23 +71,23 @@
                 </button>
                 <div class="nav-menu" id="navMenu">
                     <a href="../index.html" class="nav-link">Mosaic</a>
-                    <a href="../crop/crop.html" class="nav-link">Image Crop</a>
-                    <a href="../convert/convert.html" class="nav-link">Format Convert</a>
-                    <a href="../icon/icon.html" class="nav-link">Icon Generator</a>
-                    <a href="../compress/compress.html" class="nav-link">Image Compress</a>
-                    <a href="../blank/blank.html" class="nav-link">Color to B&W</a>
-                    <a href="../watermark/watermark.html" class="nav-link">Add Watermark</a>
-                    <a href="../removewm/removewm.html" class="nav-link">Remove Watermark</a>
-                    <a href="../nine/nine.html" class="nav-link">Grid Split</a>
-                    <a href="../text/text.html" class="nav-link">Text to Image</a>
-                    <a href="../join/join.html" class="nav-link">Image Join</a>
-                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text to Image</a>
-                    <a href="../corner/corner.html" class="nav-link">Round Corners</a>
-                    <a href="../expand/expand.html" class="nav-link">Image Expand</a>
-                    <a href="../old/old.html" class="nav-link">Old Photo Repair</a>
+                    <a href="../crop/crop.html" class="nav-link">Crop</a>
+                    <a href="../convert/convert.html" class="nav-link">Convert</a>
+                    <a href="../icon/icon.html" class="nav-link">Icon</a>
+                    <a href="../compress/compress.html" class="nav-link">Compress</a>
+                    <a href="../blank/blank.html" class="nav-link">B&W</a>
+                    <a href="../watermark/watermark.html" class="nav-link">Add WMK</a>
+                    <a href="../removewm/removewm.html" class="nav-link">Remove WMK</a>
+                    <a href="../nine/nine.html" class="nav-link">3x3 Grid</a>
+                    <a href="../text/text.html" class="nav-link">Text2Img</a>
+                    <a href="../join/join.html" class="nav-link">Stitching</a>
+                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text2Img</a>
+                    <a href="../corner/corner.html" class="nav-link">RC</a>
+                    <a href="../expand/expand.html" class="nav-link">Expand</a>
+                    <a href="../old/old.html" class="nav-link">OPR</a>
                     <a href="../bg/bg.html" class="nav-link">B&W Colorize</a>
-                    <a href="../removebg/removebg.html" class="nav-link">Background Remove</a>
-                    <a href="changebg.html" class="nav-link">Background Change</a>
+                    <a href="../removebg/removebg.html" class="nav-link">BG Remove</a>
+                    <a href="changebg.html" class="nav-link">BG Change</a>
                 </div>
             </div>
         </nav>
