--- a/crop/crop.html
+++ b/crop/crop.html
@@ -70,21 +70,21 @@
                     <a href="../index.html" class="nav-link">Mosaic</a>
                     <a href="crop.html" class="nav-link">Crop</a>
                     <a href="../convert/convert.html" class="nav-link">Convert</a>
-                    <a href="../icon/icon.html" class="nav-link">Icon Generator</a>
+                    <a href="../icon/icon.html" class="nav-link">Icon</a>
                     <a href="../compress/compress.html" class="nav-link">Compress</a>
-                    <a href="../blank/blank.html" class="nav-link">Color to Black &amp; White</a>
-                    <a href="../watermark/watermark.html" class="nav-link">Add Watermark</a>
-                    <a href="../removewm/removewm.html" class="nav-link">Remove Watermark</a>
-                    <a href="../nine/nine.html" class="nav-link">3x3 Grid Split</a>
-                    <a href="../text/text.html" class="nav-link">Text to Image</a>
-                    <a href="../join/join.html" class="nav-link">Image Stitching</a>
-                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text to Image</a>
-                    <a href="../corner/corner.html" class="nav-link">Rounded Corners</a>
+                    <a href="../blank/blank.html" class="nav-link">B&W</a>
+                    <a href="../watermark/watermark.html" class="nav-link">Add WMK</a>
+                    <a href="../removewm/removewm.html" class="nav-link">Remove WMK</a>
+                    <a href="../nine/nine.html" class="nav-link">3x3 Grid</a>
+                    <a href="../text/text.html" class="nav-link">Text2Img</a>
+                    <a href="../join/join.html" class="nav-link">Stitching</a>
+                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text2Img</a>
+                    <a href="../corner/corner.html" class="nav-link">RC</a>
                     <a href="../expand/expand.html" class="nav-link">Upscale</a>
-                    <a href="../old/old.html" class="nav-link">Old Photo Restoration</a>
+                    <a href="../old/old.html" class="nav-link">OPR‌</a>
                     <a href="../bg/bg.html" class="nav-link">Colorize B/W</a>
-                    <a href="../removebg/removebg.html" class="nav-link">Background Remover</a>
-                    <a href="../changebg/changebg.html" class="nav-link">Background Changer</a>
+                    <a href="../removebg/removebg.html" class="nav-link">BG Remover</a>
+                    <a href="../changebg/changebg.html" class="nav-link">BG Changer</a>
                 </div>
             </div>
         </nav>
