--- a/join/join.html
+++ b/join/join.html
@@ -59,6 +59,9 @@
         }
         /* Upload hint text in white */
         .upload-hint { color: #ffffff !important; }
+        /* Left-align nav links under #navMenu */
+        #navMenu { justify-content: flex-start !important; text-align: left; }
+        #navMenu .nav-link { justify-content: flex-start !important; text-align: left !important; }
     </style>
 </head>
 <body>
@@ -74,21 +77,21 @@
                     <a href="../index.html" class="nav-link">Mosaic</a>
                     <a href="../crop/crop.html" class="nav-link">Crop</a>
                     <a href="../convert/convert.html" class="nav-link">Convert</a>
-                    <a href="../icon/icon.html" class="nav-link">Icon Generator</a>
+                    <a href="../icon/icon.html" class="nav-link">Icon</a>
                     <a href="../compress/compress.html" class="nav-link">Compress</a>
                     <a href="../blank/blank.html" class="nav-link">Grayscale</a>
-                    <a href="../watermark/watermark.html" class="nav-link">Watermark</a>
-                    <a href="../removewm/removewm.html" class="nav-link">Remove Watermark</a>
+                    <a href="../watermark/watermark.html" class="nav-link">Add WMK</a>
+                    <a href="../removewm/removewm.html" class="nav-link">Remove WMK</a>
                     <a href="../nine/nine.html" class="nav-link">Nine Grid</a>
-                    <a href="../text/text.html" class="nav-link">Text to Image</a>
-                    <a href="join.html" class="nav-link">Image Joiner</a>
-                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text to Image</a>
-                    <a href="../corner/corner.html" class="nav-link">Round Corners</a>
-                    <a href="../expand/expand.html" class="nav-link">Image Expansion</a>
-                    <a href="../old/old.html" class="nav-link">Photo Restoration</a>
+                    <a href="../text/text.html" class="nav-link">Text2Img</a>
+                    <a href="join.html" class="nav-link">Stitching</a>
+                    <a href="../textToimage/textToimage.html" class="nav-link">Add Text2Img</a>
+                    <a href="../corner/corner.html" class="nav-link">RC</a>
+                    <a href="../expand/expand.html" class="nav-link">Expansion</a>
+                    <a href="../old/old.html" class="nav-link">OPR</a>
                     <a href="../bg/bg.html" class="nav-link">Colorization</a>
-                    <a href="../removebg/removebg.html" class="nav-link">Background Removal</a>
-                    <a href="../changebg/changebg.html" class="nav-link">Background Changer</a>
+                    <a href="../removebg/removebg.html" class="nav-link">BG Removal</a>
+                    <a href="../changebg/changebg.html" class="nav-link">BG Changer</a>
                 </div>
             </div>
         </nav>
